--- a/views/product_history.ejs
+++ b/views/product_history.ejs
@@ -397,9 +397,9 @@
             <div class="w-full mb-1">
               <div class="mb-4">
                 <h1
-                  class="text-xl font-semibold text-gray-900 sm:text-2xl dark:text-white"
+                  class="text-xl font-semibold text-gray-500 sm:text-2xl dark:text-white"
                 >
-                  product history
+                  Supply History
                 </h1>
               </div>
               <div
@@ -459,12 +459,7 @@
                         >
                           Product Name
                         </th>
-                        <th
-                          scope="col"
-                          class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
-                        >
-                          Product Code
-                        </th>
+
                         <th
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
@@ -475,21 +470,51 @@
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
                         >
-                          Available
+                          Date
                         </th>
 
                         <th
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
                         >
-                          Unit Price
+                          Manu Date
+                        </th>
+                        <th
+                          scope="col"
+                          class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
+                        >
+                          Exp Date
+                        </th>
+                        <th
+                          scope="col"
+                          class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
+                        >
+                          Supplier
+                        </th>
+                        <th
+                          scope="col"
+                          class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
+                        >
+                          Price
+                        </th>
+                        <th
+                          scope="col"
+                          class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
+                        >
+                          Amount
+                        </th>
+                        <th
+                          scope="col"
+                          class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
+                        >
+                          Total cost
                         </th>
                       </tr>
                     </thead>
                     <tbody
                       class="bg-gray-100 divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700"
                     >
-                      <% for(let i=0;i<10;i++){ %>
+                      <% for(let i=0;i<5;i++){ %>
                       <tr class="hover:bg-gray-200 dark:hover:bg-gray-700">
                         <td class="w-4 p-4">
                           <div class="flex items-center">
@@ -524,7 +549,7 @@
                           <img
                             class="w-10 h-10 rounded-full"
                             src="/images/product_demo.png"
-                            alt="Neil Sims avatar"
+                            alt="product img"
                           />
 
                           <div
@@ -538,15 +563,11 @@
                             <div
                               class="overflow-hidden text-base font-normal text-gray-500 truncate xl:max-w-xs dark:text-gray-400"
                             >
-                              %= row.description %>
+                              %= row.code %>
                             </div>
                           </div>
                         </td>
-                        <td
-                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                        >
-                          %= row.p_code %>
-                        </td>
+
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
@@ -556,15 +577,78 @@
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
-                          %= row.amount %>
+                          %= row.date_time %>
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          %= row.mf_date %>
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          %= row.exp_date %>
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          %= row.supplier %>
                         </td>
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
                           %= row.price %>
                         </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          %= row.amount %>
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          %= row.total_cost %>
+                        </td>
                       </tr>
                       <% } %>
+
+                      <tr class="bg-gray-200">
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          Total Supplied Amount
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          %= total_purchase %>
+                        </td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
